<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微汇报</string>
    <string name="menu_settings">功能设置</string>
    <string name="menu_profile">个人资料</string>
    <string name="menu_refresh">刷新</string>
    <string name="image">图片</string>
    <string name="load_more">点击加载更多</string>
    <string name="doc_sharers">分享此文摘的用户</string>
    <string name="menu_share">分享</string>
    <string name="share_via">分享到</string>
    <string name="open_in_browser">查看原站</string>
    <string name="account">帐号</string>
    <string name="avatar">用户头像</string>
    <string name="unauthorized_user">未登录用户</string>
    <string name="weibo_bindings">微博绑定</string>
    <string name="unbinded">未绑定</string>
    <string name="login">登录</string>
    <string name="bind_to">绑定</string>
    <string name="user_home">的主页</string>
    <string name="menu_home">个人主页</string>
    <string name="menu_hot">热点</string>
    <string name="logout">退出登录</string>
    <string name="number_of_new_docs">条新消息</string>
    <string name="sina">新浪微博</string>
    <string name="qq">腾讯微博</string>
    <string name="douban">豆瓣</string>
    <string name="fanfou">饭否</string>
    <string name="err_msg_cannot_connet">现在无法连接服务器，请稍后重试</string>
    <string name="loading">努力加载中</string>

</resources>